--- a/nginx/fn.conf
+++ b/nginx/fn.conf
@@ -1,4 +1,17 @@
-    server {
+server {
+             listen 8000;
+             listen [::]:8000;
+    listen 855 ssl http2 reuseport;
+    listen [::]:855 http2 reuseport;
+server_name xxx;
+ssl_certificate /etc/xray/xray.crt;
+ssl_certificate_key /etc/xray/xray.key;
+ssl_ciphers EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+ECDSA+AES128:EECDH+aRSA+AES128:RSA+AES128:EECDH+ECDSA+AES256:EECDH+aRSA+AES256:RSA+AES256:EECDH+ECDSA+3DES:EECDH+aRSA+3DES:RSA+3DES:!MD5;
+ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
+root /var/www/html;
+}
+
+        server {
              listen 80;
              listen [::]:80;
              listen 8080;
@@ -10,31 +23,11 @@
              ssl_certificate_key /etc/xray/xray.key;
              ssl_ciphers EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+ECDSA+AES128:EECDH+aRSA+AES128:RSA+AES128:EECDH+ECDSA+AES256:EECDH+aRSA+AES256:RSA+AES256:EECDH+ECDSA+3DES:EECDH+aRSA+3DES:RSA+3DES:!MD5;
              ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
-             root /var/www/html;
-location /kuota-habis
-{
-proxy_redirect off;
-proxy_pass http://127.0.0.1:23499;
-proxy_http_version 1.1;
-proxy_set_header X-Real-IP $remote_addr;
-proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-proxy_set_header Upgrade $http_upgrade;
-proxy_set_header Connection "upgrade";
-proxy_set_header Host $host;
-}
-location /worryfree
-{
-proxy_redirect off;
-proxy_pass http://127.0.0.1:23488;
-proxy_http_version 1.1;
-proxy_set_header X-Real-IP $remote_addr;
-proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-proxy_set_header Upgrade $http_upgrade;
-proxy_set_header Connection "upgrade";
-proxy_set_header Host $host;
-}
-location /vmessws
-{
+             root /home/vps/public_html;
+    location ~ /vmess {
+    if ($http_upgrade != "Websocket") {
+    rewrite /(.*) /vmess break;
+    }
 proxy_redirect off;
 proxy_pass http://127.0.0.1:23456;
 proxy_http_version 1.1;
@@ -44,8 +37,23 @@ proxy_set_header Upgrade $http_upgrade;
 proxy_set_header Connection "upgrade";
 proxy_set_header Host $host;
 }
-location /trojan-ws
-{
+    location ~ /v {
+    if ($http_upgrade != "Websocket") {
+    rewrite /(.*) /v break;
+    }
+proxy_redirect off;
+proxy_pass http://127.0.0.1:14016;
+proxy_http_version 1.1;
+proxy_set_header X-Real-IP $remote_addr;
+proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+proxy_set_header Upgrade $http_upgrade;
+proxy_set_header Connection "upgrade";
+proxy_set_header Host $http_host;
+}
+    location ~ /t {
+    if ($http_upgrade != "Websocket") {
+    rewrite /(.*) /t break;
+    }
 proxy_redirect off;
 proxy_pass http://127.0.0.1:25432;
 proxy_http_version 1.1;
@@ -67,6 +75,14 @@ proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 proxy_set_header Upgrade $http_upgrade;
 proxy_set_header Connection "upgrade";
 proxy_set_header Host $http_host;
+}
+location ^~ /vless-grpc
+{
+proxy_redirect off;
+grpc_set_header X-Real-IP $remote_addr;
+grpc_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+grpc_set_header Host $http_host;
+grpc_pass grpc://127.0.0.1:24456;
 }
 location ^~ /vmess-grpc
 {
